pushing the final changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ajay Raj Singh - Data Engineer Portfolio</title>
+    <title>Ajay Raj Singh - Portfolio</title>
     <meta
       name="description"
       content="Data Engineer with 6+ years of experience in ETL pipelines, cloud solutions, and data analytics"
@@ -30,11 +30,12 @@
           <div class="profile-info"> 
             <h1 class="username">Ajay Raj Singh</h1>
             <div class="bio">
-              <div>💻 Data Engineer | 6+ Years Experience</div>
-              <div>🚀 Python • SQL • PySpark • AWS • Azure</div>
-              <div>🎯 ETL Pipelines • ML • Data Visualization</div>
-              <div>🏆 NJBDA Presenter • Data Science Club President</div>
-              <div>📍 Jersey City, NJ</div>
+              <div>Data Engineer | Data Scientist | 6+ Years</div>
+              <div>Python | PySpark | Azure | AWS | Big Data | Distributed System | Snowflake | dbt| Databricks</div>
+              <div>200GB+ Daily Processed | 99.5% Uptime | $1,800/mo Saved on instances</div>
+              <div>Data Science Showcase winner | Data Storyteller Award Winner</div>
+              <div>NJBDA 2025 | Alpha Sigma Nu | SPU Ambassador</div>
+              <div>📍 New Jersey || Open to Opportunities</div>
             </div>
             <div class="stats">
               <div class="stat">
@@ -169,16 +170,16 @@
               <i class="fas fa-user"></i> Professional Summary
             </h3>
             <p style="line-height: 1.6; margin-bottom: 20px">
-              Data Engineer with 6+ years of experience delivering
-              production-ready data solutions and scalable ETL pipelines across
-              healthcare, sports analytics, and enterprise domains. Expert in
-              Python, SQL, and cloud platforms (AWS, Azure), with proven
-              expertise in building real-time and batch data processing systems
-              using PySpark and Apache Airflow. Demonstrated track record of
-              reducing operational costs by 25%, improving data processing
-              throughput by 35%, and achieving 100% data integrity across
-              distributed systems. Successfully presented research at NJBDA 2025
-              on health-tech and NLP applications.
+              Data Engineer with 6+ years in production. I've shipped pipelines
+              that process 200GB+ of healthcare claims daily on AWS, kept
+              systems at 99.5% uptime, and cut cloud costs by $1,800/month,
+              in production. 
+              At Saint Peter's University I went
+              beyond engineering and into research: built an AQI routing system
+              that finds the least-polluted path for respiratory patients, and
+              an NLP pipeline digesting 10,000+ news articles a day, both
+              presented at NJBDA 2025. I don't just move data, I make sure it
+              arrives clean, fast, and trusted by the teams using it.
             </p>
             <div class="skills-container" id="skills-grid">
               <!-- Skills will be loaded dynamically -->
